feat: endpoint para registro
